--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+RELEASE_STORE_FILE=my-release-key.keystore
+RELEASE_KEY_ALIAS=my-key-alias
+RELEASE_STORE_PASSWORD=myruble435326
+RELEASE_KEY_PASSWORD=myruble435326
