--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "16.6.3",
     "react-native": "^0.58.5",
+    "react-native-device-info": "^0.26.4",
     "react-native-flash-message": "^0.1.10",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-material-ui": "^1.30.1",
