--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-flash-message": "^0.1.10",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-material-ui": "^1.30.1",
+    "react-native-modal-overlay": "^1.3.1",
     "react-native-tab-view": "^1.3.2",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
