--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "react": "16.6.3",
     "react-native": "^0.58.5",
     "react-native-device-info": "^0.26.4",
-    "react-native-flash-message": "^0.1.10",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.0.16",
-    "react-native-material-ui": "^1.30.1",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-tab-view": "^1.3.2",
     "react-native-vector-icons": "^6.3.0",
