added heart modal and setup admob

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,10 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
+    implementation "com.google.android.gms:play-services-base:16.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.6"
+    implementation "com.google.firebase:firebase-ads:15.0.1"
     implementation project(':react-native-device-info')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
@@ -165,3 +169,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
