--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "^0.58.5",
     "react-native-device-info": "^0.26.4",
     "react-native-elements": "^1.1.0",
+    "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-tab-view": "^1.3.2",
