--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,10 +151,13 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-background-job')
     implementation project(':react-native-firebase')
     implementation "com.google.android.gms:play-services-base:16.0.1"
     implementation "com.google.firebase:firebase-core:16.0.6"
     implementation "com.google.firebase:firebase-ads:15.0.1"
+    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
     implementation project(':react-native-device-info')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
