--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "ios": "react-native run-ios",
-    "android": "cd android && ./gradlew clean && cd .. && react-native run-android"
+    "android": "cd android && gradlew clean && cd .. && react-native run-android"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "prop-types": "^15.7.2",
     "react": "16.6.3",
     "react-native": "^0.58.6",
+    "react-native-background-job": "^2.2.0",
     "react-native-device-info": "^0.26.4",
     "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.2.3",
