--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.0.16",
+    "react-native-restart": "0.0.10",
     "react-native-tab-view": "^1.3.2",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.0",
