--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,8 +108,8 @@ android {
         applicationId "com.myruble"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 23
-        versionName "0.8.1"
+        versionCode 24
+        versionName "0.8.2"
     }
     signingConfigs {
         release {
@@ -162,7 +162,10 @@ dependencies {
     implementation "com.google.firebase:firebase-ads:15.0.1"
     implementation "com.google.firebase:firebase-messaging:17.3.4"
     implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
-    implementation project(':react-native-device-info')
+    implementation(project(":react-native-device-info"),  {
+        exclude group: "com.google.android.gms"
+    })
+    implementation "com.google.android.gms:play-services-gcm:16.0.0"
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
